# FastApi_Blueprint

./: .env.dev  .env.production  README.md  docker-compose.yml  pyproject.toml  server.py  setup.sh
src/: __init__.py  exception.py  logger.py
src/models/: query_model.py
src/routes/: api_router.py  user_router.py
